# scriba

./: .gitignore  README.md
.github/workflows/: publish.yml
workspace/: Cargo.toml
workspace/scriba/: Cargo.toml
workspace/scriba-demo/: Cargo.toml
workspace/scriba-demo/src/: main.rs
workspace/scriba/examples/: diff_viewer.rs  envelope_custom_fields.rs  envelope_flat.rs  envelope_meta.rs  envelope_nested.rs  prompt_theming.rs  staged_diff_integration.rs  styling.rs  table_layouts.rs
workspace/scriba/src/: config.rs  envelope.rs  error.rs  lib.rs  ui.rs
workspace/scriba/src/figglet/: mod.rs
workspace/scriba/src/figlet/: mod.rs
workspace/scriba/src/logger/: mod.rs
workspace/scriba/src/output/: content.rs  diff.rs  mod.rs  render.rs  style.rs  table.rs  tests.rs
workspace/scriba/src/prompt/: inquire.rs  mod.rs  theme.rs
workspace/scriba/tests/: ui_smoke.rs
