[workspace]
members = ["scriba", "scriba-demo"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kitechsoftware/scriba"
homepage = "https://github.com/kitechsoftware/scriba"
documentation = "https://docs.rs/scriba"
readme = "../README.md"
keywords = ["cli", "terminal", "prompt", "output", "markdown"]
categories = ["command-line-interface"]

[workspace.dependencies]
scriba = { path = "./scriba", features = ["logger", "prompt", "figlet"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tabled = "0.16"