[package]
name = "scriba"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI text rendering, prompts, and terminal output utilities"

[features]
default = []
prompt = ["dep:inquire"]
logger = ["dep:console"]
figlet = ["dep:figlet-rs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tabled = "0.16"

inquire = { version = "0.9", optional = true }
console = { version = "0.16", optional = true }
figlet-rs = { version = "0.1", optional = true }