[package]
name = "scriba"
description = "CLI text rendering, prompts, and terminal output utilities"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
prompt = ["dep:inquire"]
logger = ["dep:console"]
figlet = ["dep:figlet-rs"]
full = ["prompt", "logger", "figlet"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tabled.workspace = true

inquire = { version = "0.9", optional = true }
console = { version = "0.16", optional = true }
figlet-rs = { version = "1", optional = true }